OO-7399: Display data collection previews in curriculum browser